Update paso06.md